# ai-media-stack

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  vms
docs/: ANNOUNCEMENT.md  API.md  ARCHITECTURE.md
services/animate-web/: README.md  app.py
services/api-gateway/: .env.example  README.md  app.py
services/control-plane/: README.md  app.py
services/control-plane/static/: index.html
services/cubicasa-service/: Dockerfile.cpu  README.md  docker-compose.yml  infer_cubi.py  serve_cubi.py
services/dub-web/: .env.example  README.md  app.py
services/floorplan3d/: Dockerfile.cpu  README.md  build_guarded.sh  docker-compose.yml  serve.py
services/gpu-broker/: README.md  app.py
services/interior3d-web/: README.md  app.py
services/vms/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.deepstream.yml  docker-compose.yml  pyproject.toml
services/vms/app/: __init__.py  auth.py  config.py  main.py  schemas.py
services/vms/app/api/: cameras.py  events.py  face_groups.py  identities.py  live.py  people.py  system.py
services/vms/app/db/: __init__.py  database.py  models.py
services/vms/app/detect/: __init__.py  base.py  deepstream_client.py  vehicle_attrs.py  yolo_onnx.py
services/vms/app/faces/: __init__.py  grouping.py  index.py  recognizer.py
services/vms/app/recording/: __init__.py  cleanup.py  clipper.py  hls.py  segmenter.py
services/vms/app/reid/: __init__.py  attributes.py  decay.py  embedder.py  gallery.py  maintenance.py  manager.py  pipeline.py  schemas.py  tracker.py
services/vms/app/static/: app.js  faces.js  identities.css  identities.js  index.html  people.css  people.js  style.css
services/vms/app/workers/: __init__.py  camera_worker.py  manager.py
services/vms/docs/: ARCHITECTURE.json  REID_ARCHITECTURE.json
services/vms/scripts/: backfill_face_samples.py  calibrate_thresholds.py  consolidate_identities.py  download_models.py  enroll_person.py  export_reid_onnx.py  fetch_vehicle_models.sh
services/vms/tests/: test_api.py  test_faces.py  test_identities_api.py  test_reid_embedder.py  test_reid_gallery.py  test_reid_maintenance.py  test_reid_manager.py
services/voice-stream/: README.md  app.py
